--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                     <button type="button" class="btn btn-primary btn-lg">Login</button>
                                 </li>
                                 <li class="slickn">
-                                    <button type="button" class="btn btn-default btn-lg">Register</button>
+                                    <button type="button" class="btn btn-danger btn-lg">Register</button>
                                 </li>
 
                             </ul>
