--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                         </div>
 
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 down_nav">
                         <ul id="copy">
                             <li>
                                 <a href="#">Home</a>
